Fixed horizontal scroll by adding custom sidebar

--- a/src/app/container/container.component.scss
+++ b/src/app/container/container.component.scss
@@ -12,7 +12,7 @@
   text-align: center;
   border-radius: 4px;
   position: absolute;
-  z-index: 1000000;
+  z-index: 5;
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
               0 2px 2px 0 rgba(0, 0, 0, 0.14),
